📝 Docs: UI updates and bugfixes
- Fixed video not centered when DASH video in fullscreen mode with clappr.
- Added responsive clappr DASH player with bootstrap's `embed-responsive`.
- Remove old hack to resize clappr DASH player with css.
- Added new permalink icon and slugify to toc.
- Added "back-to-top" button for easy navigation.
- WebGear_RTC: More Performance updates through `setCodecPreferences`.
- WebGear_RTC: Moved default Video RTC video launcher to `__offer`.
- Updated changelog.md

--- a/docs/overrides/assets/stylesheets/custom.css
+++ b/docs/overrides/assets/stylesheets/custom.css
@@ -109,36 +109,59 @@ blockquote p {
   display: inline;
 }
 
-/* Fix the player container to take up 100% width and to calculate its height based on its children. */
-[data-player] {
-    position: relative;
-    width: 100%;
-    height: auto;
-    margin: 0;    
+/* Handles Responive Video tags (from bootstrap) */
+.video {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.embed-responsive {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
 }
 
-/* Fix the video container to take up 100% width and to calculate its height based on its children. */
-[data-player] .container[data-container] {
-    width: 100%;
-    height: auto;
-    position: relative;
+.embed-responsive::before {
+  display: block;
+  content: "";
 }
 
-/* Fix the media-control element to take up the entire size of the player. */
-[data-player] .media-control[data-media-control] {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.embed-responsive .embed-responsive-item,
+.embed-responsive iframe,
+.embed-responsive embed,
+.embed-responsive object,
+.embed-responsive video {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
-/* Fix the video element to take up 100% width and to calculate its height based on its natural aspect ratio. */
-[data-player] video {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: auto;
+.embed-responsive-21by9::before {
+  padding-top: 42.857143%;
 }
+
+.embed-responsive-16by9::before {
+  padding-top: 56.25%;
+}
+
+.embed-responsive-4by3::before {
+  padding-top: 75%;
+}
+
+.embed-responsive-1by1::before {
+  padding-top: 100%;
+}
+
+/* ends */
+
  footer.sponsorship {
 	 text-align: center;
 }
